# serverZero_Rel19

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  Authors.md  CMakeLists.txt  COPYING  ChangeLog.md  Dockerfile  INSTALL-Windows.md  NEWS  README.md  THANKS  Thanks.md  config.h.cmake  docker-launch.sh  docker-supervisord.conf  revision.h.cmake
contrib/map-extractor/libmpq/: CMakeLists.txt  common.h  mpq.cpp
dep/libmpq/: CMakeLists.txt  libmpq-config.in.cmake  libmpq.pc.in.cmake
dep/libmpq/libmpq/: CMakeLists.txt  config.h.cmake  explode.h  mpq-internal.h  mpq.c
src/bindings/scripts/: 100ScriptDev2.vcxproj  110ScriptDev2.vcxproj  120ScriptDev2.sln  120ScriptDev2.vcxproj  120ScriptDev2.vcxproj.filters  CMakeLists.txt  README  ScriptDevMgr.cpp  ScriptDevMgr.h  ScriptMgr.cpp  ScriptMgr.h  config-sd2.h.cmake  config.h  config.h.in  scriptdev2.conf.dist.cmake  scriptdev2.conf.dist.in  sd2_revision_nr.h  sd2_revision_sql.h
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  MemoryManagement.cpp  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  SingletonImp.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMapSet.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AggressorAI.cpp  AggressorAI.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  CMakeLists.txt  Camera.cpp  Camera.h  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  (+202 more)
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  CMakeLists.txt  ahbot.conf.dist.in
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt
src/game/ChatCommands/: Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  debugcmds.cpp
src/game/MotionGenerators/: FleeingMovementGenerator.cpp  MotionMaster.cpp  MotionMaster.h  PathFinder.cpp  PathFinder.h  PointMovementGenerator.h  RandomMovementGenerator.cpp  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/Object/: AggressorAI.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  DynamicObject.h  Formulas.h  GMTicketMgr.cpp  GameObject.cpp  GameObject.h  Guild.cpp  Item.cpp  Item.h  ItemEnchantmentMgr.cpp  ItemEnchantmentMgr.h  ItemPrototype.h  LootMgr.cpp  LootMgr.h  Object.cpp  Object.h  ObjectAccessor.cpp  ObjectGuid.cpp  ObjectGuid.h  ObjectMgr.cpp  ObjectMgr.h  Pet.cpp  Pet.h  Player.cpp  Player.h  ReactorAI.cpp  ReputationMgr.cpp  ReputationMgr.h  SocialMgr.h  (+8 more)
src/game/OutdoorPvP/: CMakeLists.txt  OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h
src/game/References/: ThreatManager.cpp  ThreatManager.h
src/game/Server/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  Opcodes.cpp  Opcodes.h  SQLStorages.cpp  SQLStorages.h  SharedDefines.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp
src/game/Tools/: CharacterDatabaseCleaner.h  Language.h  PlayerDump.cpp  PlayerDump.h
src/game/Warden/: WardenBase.cpp  WardenBase.h  WardenDataStorage.cpp  WardenDataStorage.h  WardenMac.cpp  WardenMac.h  WardenModuleMac.h  WardenModuleWin.h  WardenWin.cpp  WardenWin.h
src/game/WorldHandlers/: AccountMgr.cpp  AuctionHouseHandler.cpp  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CreatureLinkingMgr.cpp  CreatureLinkingMgr.h  GameEventMgr.cpp  GameEventMgr.h  GossipDef.cpp  GossipDef.h  GridDefines.h  GridMap.cpp  GridMap.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  Group.cpp  Group.h  GroupHandler.cpp  GuildHandler.cpp  GuildMgr.cpp  InstanceData.cpp  InstanceData.h  LFGHandler.cpp  LFGHandler.h  LFGMgr.h  LootHandler.cpp  Mail.h  MailHandler.cpp  Map.cpp  Map.h  MapManager.cpp  MapManager.h  (+35 more)
src/game/extras/: CMakeLists.txt  Mod.cpp  Mod.h  SpellMod.cpp  mods.conf.dist.in
src/game/luaengine/: LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  LuaHookMgr.cpp  LuaHookMgr.h  LuaHooks.cpp  LuaIncludes.h
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  mangosd.conf.dist.cmake  mangosd.conf.dist.in  mangosd.rc
src/modules/: CMakeLists.txt
src/realmd/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  realmd.conf.dist.cmake  realmd.conf.dist.in  realmd.rc
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.cmake  SystemConfig.h.in  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.h  WorldPacket.h  revision.h  revision_nr.h  revision_sql.h
(+1154 files in other folders)
